<resources>
    <string name="app_name">StaffApp</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="please_wait">Please Wait . . .</string>
    <string name="sync_text">Sync Now</string>
    <string name="manual_checks">Manual Check In</string>
    <string name="settings_text">Settings</string>
    <string name="server_ip_address">Server IP Address</string>
    <string name="evacuation_id_text">Evacuation Center ID</string>
    <string name="connection_info_text">Connection Info</string>
    <string name="center_name">Evacuation Center Name</string>
    <string name="center_address">Evacuation Center Address</string>
    <string name="please_sync">[Please Sync First]</string>
    <string name="title_activity_check_in">Check In</string>
    <string name="safe_text">SAFE</string>
    <string name="injured_text">INJURED</string>
    <string name="missing_text">MISSING</string>
    <string name="dead_text">DEAD</string>
    <string name="push_unsent_to_server">Push Unsent To Server</string>
    <string name="clear_check_ins">Clear Check Ins</string>
    <string name="manual_check_ins">Manual Check Ins</string>
</resources>
